<resources>
    <string name="appName">Bench Project</string>
    <string name="popularMoviesFragmentLabel">Popular Movies</string>
    <string name="favouriteMoviesFragmentLabel">Favourite Movies</string>
    <string name="movieName">Movie Name</string>
    <string name="movieReleaseDate">Movie Release Date</string>
    <string name="movieRating">Movie Rating</string>
    <string name="movieImageDescription">Image shows movie poster</string>
    <string name="calendarMovieDescription">Image shows calendar icon from material design</string>
    <string name="starMovieDescription">Image shows star icon from material design</string>
    <string name="snackbarRetry">Retry</string>
    <string name="errorMessageMovies">"Something went wrong"</string>
    <string name="descriptionLabel">Description</string>
    <string name="budgetLabel">Budget</string>
    <string name="ratingLabel">Rating</string>
    <string name="releaseDateLabel">Release Date</string>
    <string name="genresLabel">Genres</string>
    <string name="emptyDatabaseText">I have no data to show</string>
    <string name="moreFragmentLabel">More</string>
    <string name="popularMoviesFragmentNavGraphLabel">popularMoviesFragment</string>
    <string name="favouriteMoviesFragmentNavGraphLabel">favouriteMoviesFragment</string>
    <string name="movieDetailsFragmentNavGraphLabel">movieDetailsFragment</string>
    <string name="moreFragmentNavGraphLabel">moreFragment</string>
    <string name="activityLicensesNavGraphLabel">activityLicenses</string>
    <string name="descriptionMoreFragmentLabel">Description</string>
    <string name="descriptionMoreFragmentText">Simple app to show films from The Movie Database. Caching data is implemented therefore you can see everything that was fetched.</string>
    <string name="licensesMoreFragmentLabel">Licenses</string>
    <string name="showLicensesLabel">Show Licenses</string>
    <string name="githubLabel">GitHub</string>
    <string name="aboutMeMoreFragmentLabel">About Me</string>
    <string name="linkedinLabel">LinkedIn</string>
    <string name="refreshButtonLabel">Refresh</string>
    <string name="emptyDatabaseFavouriteMoviesText">I have no data to show\nAdd movies to favourite</string>
</resources>
