<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.antosik.benchproject.app.movie.details.viewModel.MovieDetailsViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/movieDetailsGenresLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/genresLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/genresChipGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            app:genresChips="@{viewModel.responseMovieDetails.genres}" />

        <TextView
            android:id="@+id/movieDetailsDescriptionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/descriptionLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@{viewModel.responseMovieDetails.description}"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movieDetailsBudgetLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/budgetLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@{viewModel.responseMovieDetails.budgetText()}"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movieDetailsRatingLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ratingLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@{String.valueOf(viewModel.responseMovieDetails.rating)}"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/movieDetailsReleaseDateLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/releaseDateLabel"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movieDetailsReleaseDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:gravity="center"
            android:text="@{viewModel.responseMovieDetails.releaseDate}"
            android:textSize="16sp" />
    </LinearLayout>
</layout>
